--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -371,7 +371,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep7" ng-elf="loaded" title="Submit">
+                            <wm-wizardstep name="wizardstep7" ng-if="loaded" title="Submit">
                                 <wm-layoutgrid name="layoutgrid19">
                                     <wm-gridrow name="gridrow60_1" padding="2em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn112">
