Get some form status. Files modified - [_viewForm]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -54,6 +54,13 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157_1"></wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow114">
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn204"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn205" horizontalalign="center">
+                                        <wm-label padding="unset 0.5em" name="label139_1" caption="bind:&quot;Status: &quot; + Variables.stvCurrentStatus.dataSet.status" class="h3" margin="0px unset"></wm-label>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn206"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow15">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn29"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn26" horizontalalign="center">
